--- a/index.html
+++ b/index.html
@@ -35,89 +35,100 @@
         </div>
     </header>
 
-</body>
-<section>
-    <div>
-        <div class="bg-linear-to-l from-green-900 to-green-400 p-10">
-            <h1 class="text-3xl text-white font-bold text-center">Contact</h1>
-        </div>
-    </div>
-</section>
-<section class=" bg-amber-50 p-15">
-    <div class="w-full max-w-[1080px] my-0 mx-auto py-0 p-5 ">
-        <div class="flex gap-5">
-            <div class="w-1/2 flex-col gap-5">
-                <div>
-                    <h2 class="text-3xl font-extrabold">Entrer en contact</h2>
-                </div>
-                <div>
-                    <p class="text-xs">Une question, une idée, l'envie de voues engager ? Ecrivz-nous revenons vers
-                        vous
-                        rapidement.</p>
-                </div>
-                <div>
-                    <h2> Nos Coordonnées</h2>
-                </div>
-                <div>
-                    <p><strong>Email:</strong>@greenearth.org</p>
-                </div>
-                <div>
-                    <p><strong>Téléphone:</strong>+33 1 23 45 67 89</p>
-                </div>
-                <div>
-                    <p><strong>Adresse</strong>246 Bd Saint-Germain,75007 Paris</p>
-                </div>
-                <div>
-                    <img src="assets/img/map.png" alt="carte">
-                </div>
 
-
+    <section>
+        <div>
+            <div class="bg-linear-to-l from-green-900 to-green-400 p-10">
+                <h1 class="text-3xl text-white font-bold text-center">Contact</h1>
             </div>
-            <div class="bg-white w-1/2  p-5 flex justify-center rounded-lg">
-                <form action="formulaire" method="post"></form>
-                <ul class=" flex-col w-[95%] ">
-                    <li class=" bg-gray-100 rounded-sm p-3 m-5">
-                        <label for="name">Nom et prénom:</label>
-                        <input type="text" id="name" name="nom et prénom" />
-
-                    </li>
-                    <li class=" bg-gray-100 rounded-sm p-3 m-5">
-                        <label for="mail">E-mail&nbsp;:</label>
-                        <input type="email" id="mail" name="user_mail" />
-
-                    </li>
-                    <li class=" bg-gray-100 rounded-sm p-3 m-5">
-                        <label for="mail">E-mail&nbsp;:</label>
-                        <input type="email" id="mail" name="user_mail" />
-
-                    </li>
-                    <li class=" bg-gray-100 rounded-sm p-3 m-5">
-                        <label for="mail">E-mail&nbsp;:</label>
-                        <input type="email" id="mail" name="user_mail" />
-
-                    </li>
-                    <li class=" bg-gray-100 rounded-sm p-3 m-5">
-                        <label for="msg"></label>
-                        <textarea name="" id="msg">Votre message</textarea>
-                    </li>
-                    <div class="w-[95%] m-5 inline-block">
-                        <button type="button" class="bg-green-500 w- text-start rounded-4xl m-3.5 w-[95%] ">
-                            Envoyer
-                            votre
-                            message</button>
+        </div>
+    </section>
+    <section class=" bg-amber-50 p-15">
+        <div class="w-full max-w-[1080px] h-auto my-0 mx-auto py-0 p-5 ">
+            <div class="flex gap-5">
+                <div class="max-w-1/2 flex flex-col gap-5 ">
+                    <div>
+                        <h2 class="text-3xl font-extrabold">Entrer en contact</h2>
                     </div>
+                    <div>
+                        <p class="si">Une question, une idée, l'envie de voues engager ? Ecrivez-nous revenons vers
+                            vous
+                            rapidement.</p>
+                    </div>
+                    <div>
+                        <h2> Nos Coordonnées</h2>
+                    </div>
+                    <div>
+                        <p><strong>Email:</strong>@greenearth.org</p>
+                    </div>
+                    <div>
+                        <p><strong>Téléphone:</strong>+33 1 23 45 67 89</p>
+                    </div>
+                    <div>
+                        <p><strong>Adresse</strong>246 Bd Saint-Germain,75007 Paris</p>
+                    </div>
+                    <div>
+                        <img src="assets/img/map.png" alt="carte">
+                    </div>
+                </div>
+                <div class="h-auto w-1/2 bg-white p-1 flex flex-col rounded-lg ">
+                    <form action="formulaire" method="post">
+                        <ul class=" flex flex-col gap-5 p-3 ">
+                            <li class=" bg-gray-100 rounded-sm p-3">
+                                <label for="name">Nom et prénom:</label>
+                                <input type="text" id="name" name="nom et prénom" />
 
+                            </li>
+                            <li class=" bg-gray-100 rounded-sm p-3 ">
+                                <label for="mail">E-mail&nbsp;:</label>
+                                <input type="email" id="mail" name="user_mail" />
 
-                </ul>
+                            </li>
+                            <li class=" bg-gray-100 rounded-sm p-3 ">
+                                <label for="mail">E-mail&nbsp;:</label>
+                                <input type="email" id="mail" name="user_mail" />
 
+                            </li>
+                            <li class=" bg-gray-100 rounded-sm p-3 ">
+                                <label for="mail">E-mail&nbsp;:</label>
+                                <input type="email" id="mail" name="user_mail" />
 
+                            </li>
+                            <li class=" bg-gray-100 rounded-sm p-3 ">
+                                <label for="msg"></label>
+                                <textarea id="msg " class="w-full">Votre message :</textarea>
+                            </li>
+                            <div class=" flex flex-col justify-center">
+                                <button type="submit" class="bg-green-900 text-white text-start rounded-lg p-2 ">
+                                    Envoyer le message</button>
+                            </div>
+                    </form>
+    </section>
+    <section class="bg-green-900 w-full p-30">
+        <div>
+            <div class="text-white text-center flex flex-col gap-5">
+                <h2>Agissez avec nous</h2>
+                <p>Devenez bénévole ou soutenez nos projets pourprotéger les forêts, les océans et le climat</p>
 
             </div>
-
+            <div>
+                <div class="flex justify-center p-10 gap-15">
+                    <div>
+                        <a href="#"
+                            class=" bg-linear-to-r from-green-900 to-green-400 rounded-2xl py-2 px-4 text-white hover:scale-110 transition delay-150 hover:bg-linear-to-l from-green-900 to-green-400 ">Faire
+                            un don</a>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#"
+                            class=" bg-orange-600 rounded-2xl py-2 px-4 text-white hover:scale-110 transition delay-150 hover:bg-orange-400 hover:text-blue-500">Devenir
+                            bénévole</a>
+                    </div>
+                </div>
+            </div>
         </div>
-
-    </div>
-</section>
+    </section>
+</body>
 
 
 </html>
